:bento: fix datagen and purge texture merger
* fixed loot table datagen, added many missing loot tables for slabs related blocks
* migrated merged snowy tiles texture to normal resources, removing texture merger data generator