@@ -13,6 +13,7 @@ import net.minecraftforge.data.event.GatherDataEvent;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 @Mod.EventBusSubscriber(modid = DataGenerators.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD)
@@ -30,9 +31,8 @@ public class DataGenerators {
         generator.addProvider(event.includeServer(), new ModBlockTagProvider(output, lookupProvider, fh));
         generator.addProvider(event.includeServer(), new ModItemTagProvider(output, lookupProvider, fh));
         generator.addProvider(event.includeServer(), new ModRecipeProvider(output));
-        generator.addProvider(event.includeServer(), new LootTableProvider(output, Collections.emptySet(),
-                List.of(new LootTableProvider.SubProviderEntry(ModBlockLootProvider::new, LootContextParamSets.EMPTY))));
-        generator.addProvider(event.includeClient(), new MergedTextureProvider(output, fh));
+        generator.addProvider(event.includeServer(), new LootTableProvider(output, Set.of(),
+                List.of(new LootTableProvider.SubProviderEntry(ModBlockLootProvider::new, LootContextParamSets.BLOCK))));
         generator.addProvider(event.includeClient(), new ModBlockModelProvider(output, fh));
         generator.addProvider(event.includeClient(), new ModItemModelProvider(output, fh));
     }
